# short-url-service

./: .gitignore  Cargo.toml  README.md
migrations/: 20231027000000_init.sql
src/: db.rs  error.rs  handlers.rs  main.rs  models.rs  utils.rs
static/: index.html
